@@ -6335,7 +6335,8 @@ namespace libtorrent
 
 		state_updated();
 
-		m_completed_time = time(0);
+		if (m_completed_time == 0)
+			m_completed_time = time(0);
 
 		// disconnect all seeds
 		if (settings().close_redundant_connections)
